Added Pete's newest reference

--- a/doc/paper/content/introduction.tex
+++ b/doc/paper/content/introduction.tex
@@ -87,7 +87,7 @@ implement and offers a nonlinear positive spatial differencing scheme
 known as the exponential discontinuous scheme \cite{wareing}.
 Maginot has recently developed a consistent set-to-zero (CSZ) LDFEM
 method \cite{maginot}, as well as a non-negative method for bilinear
-discontinuous FEM \cite{maginot_mc2015}. \tcr{I think a paper with Pete is out now}
+discontinuous FEM \cite{maginot_mc2015}\cite{maginot_2017}.
 
 In fluid dynamics, tradiational approaches to remedy the issue of spurious oscillations include
 the flux-corrected transport (FCT) algorithm, introduced in 1973 as
