--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -430,6 +430,16 @@
   Timestamp                = {2016.05.03}
 }
 
+@Article{maginot_2017,
+  Title                    = {Nonnegative Methods for Bilinear Discontinuous Differencing of the SN Equations on Quadrilaterals},
+  Author                   = {Peter G. Maginot and Jean C. Ragusa and Jim E. Morel},
+  Journal                  = {Nuclear Science and Engineering},
+  Year                     = {2017},
+  Pages                    = {53--69},
+  Volume                   = {185},
+  Number                   = {1}
+}
+
 @Article{minor,
   Title                    = {Exponential Characteristic Spatial Quadrature for Discrete Ordinates Radiation Transport with Rectangular Cells},
   Author                   = {B. M. Minor and K. A. Matthews},
@@ -614,4 +624,3 @@
   Adsurl                   = {http://adsabs.harvard.edu/abs/2013CMAME.253..479Z},
   Doi                      = {10.1016/j.cma.2012.08.018}
 }
-
