--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -17,7 +17,7 @@
 \journal{Journal of Computational and Applied Mathematics}
 
 \title{Application of the Entropy Viscosity Method and the Flux-Corrected Transport
-  Algorithm to the Transport Equation using Continuous Finite Elements}
+  Algorithm to the Particle Transport Equation using Continuous Finite Elements}
 
 \author[tamu]{Joshua E. Hansel}
 \ead{joshhansel@tamu.edu}
@@ -32,12 +32,12 @@
 \input{content/abstract}
 
 \begin{keyword}
-entropy viscosity \sep FCT \sep CGFEM \sep transport equation
+entropy viscosity \sep FCT \sep particle transport equation
 \end{keyword}
 
 \end{frontmatter}
 %------------------------------------------------------------------------------
-\tcr{should we ask Guermond to be a 3rd author?}
+%\tcr{should we ask Guermond to be a 3rd author?}
 
 \section{Introduction\label{sec:introduction}}
 \input{content/introduction}
