--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -513,7 +513,7 @@
 
 @Article{schar,
   Title                    = {A Synchronous and Iterative Flux-Correction Formalism for Coupled Transport Equations},
-  Author                   = {Christoph Sch\:{a}r and Piotr K. Smolarkiewicz},
+  Author                   = {Christoph Sch{\"a}r and Piotr K. Smolarkiewicz},
   Journal                  = {Journal of Computational Physics},
   Year                     = {1996},
   Number                   = {1},
