Made changes in response to 2nd round of revisions

--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -1,6 +1,6 @@
 \begin{abstract}
 The Flux-Corrected Transport (FCT) algorithm is
-applied to the unsteady and steady state particle transport equation. The proposed FCT method employs the following:
+applied to the unsteady and steady-state particle transport equation. The proposed FCT method employs the following:
 (1) a low-order, positivity-preserving scheme,
 based on the application of M-matrix properties,
 (2) a high-order scheme based on the entropy viscosity method introduced by
@@ -9,7 +9,7 @@ Guermond \cite{guermond_ev}, and
 The resulting scheme is second-order accurate in space,
 enforces an entropy inequality, mitigates the formation of spurious
 oscillations, and guarantees the absence of negativities.
-Space discretization is carried out using  continuous finite elements. 
+Space discretization is achieved using  continuous finite elements. 
 Time discretizations for unsteady problems include theta schemes
 such as explicit and implicit Euler, and strong-stability preserving
 Runge-Kutta (SSPRK) methods.
