--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -20,7 +20,7 @@
   Algorithm to the Particle Transport Equation using Continuous Finite Elements}
 
 \author[tamu]{Joshua E. Hansel}
-\ead{joshhansel@tamu.edu}
+\ead{joshua.hansel89@gmail.com}
 
 \author[tamu]{Jean C. Ragusa}
 \ead{jean.ragusa@tamu.edu}
