--- a/doc/paper/content/solution_bounds.tex
+++ b/doc/paper/content/solution_bounds.tex
@@ -3,7 +3,8 @@
 \subsubsection{Solution Bounds}\label{sec:solution_bounds}
 
 The integral form of the transport equation can be derived using the method
-of characteristics. Consider a frame of reference moving with the radiation field so that position is a function of time, resulting in a family of characteristic curves (lines since the transport equation is a linear)
+of characteristics. Consider a frame of reference moving with the radiation field so that position is a function of time, resulting in a family of characteristic curves
+(since the transport equation is linear, these curves are straight lines)
 $\x(t)$ that solve the following ODE:
 \begin{equation}
   \ddt{\x}=v\di\eqc \quad \x(0)=\x_0\eqp
