small changes. 2 big comments are left

--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -13,7 +13,7 @@ Space discretization is achieved using  continuous finite elements.
 Time discretizations for unsteady problems include theta schemes
 such as explicit and implicit Euler, and strong-stability preserving
 Runge-Kutta (SSPRK) methods.
-The developed scheme is shown to be robust with explicit time discretizations
-but encounters nonlinear convergence difficulties for steady-state
+The developed FCT scheme is shown to be robust with explicit time discretizations
+but may encounter nonlinear convergence difficulties for steady-state
 and implicit time discretizations.
 \end{abstract}
