--- a/doc/paper/content/m_matrix.tex
+++ b/doc/paper/content/m_matrix.tex
@@ -76,7 +76,7 @@ $\sumj d_K(\test_j,\test_i)=0$,
   $\tilde{A}_{i,j} \geq A_{i,j}$.
 \end{rmk}
 %-------------------------------------------------------------------------------
-If the support $S_i$ is not entirely vacuum ($\sigma(\x)=0$), then the
+If the support $S_i$ is not entirely vacuum ($\sigma(\x) \ge 0$ with $\sigma(\x) > 0$ for some $\x$), then the
 row sum is \emph{strictly} positive.
 Proof of strict positivity of the diagonal elements directly follows from proof
 of non-positivity of the off-diagonal elements and strict positivity of the
