--- a/doc/paper/content/results.tex
+++ b/doc/paper/content/results.tex
@@ -169,8 +169,7 @@ As discussed previously, the solution bounds are implicit and change
 with each iteration. For this particular case, the problematic behavior that
 emerges is an alternation between two successive solutions indefinitely, with each generating
 solution bounds that produce the other. Thus the nonlinear convergence stalls
-indefinitely, thus demonstrating a disadvantage of implicit FCT.
-\tcr{I understand the EV part. A reviewer may ask if damping the solution of the limiter coefficients would help get a solution. We may need an answer but this is the obvious remark for them to make}
+indefinitely, illustrating a disadvantage of implicit FCT.
 
 %-------------------------------------------------------------------------------
 \begin{table}[htb]\caption{Nonlinear Iterations vs. CFL Number for the
