--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -16,10 +16,8 @@
 
 \journal{Journal of Computational and Applied Mathematics}
 
-\title{Application of the Entropy Viscosity Method and the Flux-Corrected Transport
-  Algorithm to the Particle Transport Equation using Continuous Finite Elements\\
-	Flux-Corrected Transport Techniques Applied to the steady-state and time-dependent 
-	Radiation Transport Equation discretized with CFEM	}
+\title{Flux-Corrected Transport Techniques Applied to the
+	Radiation Transport Equation Discretized with CFEM}
 
 \author[tamu]{Joshua E. Hansel}
 \ead{joshua.hansel89@gmail.com}
