no CFEM acrononym in title

--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -17,7 +17,7 @@
 \journal{Journal of Computational and Applied Mathematics}
 
 \title{Flux-Corrected Transport Techniques Applied to the
-	Radiation Transport Equation Discretized with CFEM}
+	Radiation Transport Equation Discretized with Continuous Finite Elements}
 
 \author[tamu]{Joshua E. Hansel}
 \ead{joshua.hansel89@gmail.com}
