--- a/doc/paper/content/results.tex
+++ b/doc/paper/content/results.tex
@@ -170,7 +170,7 @@ with each iteration. This challenge is compounded in the case of large time
 step sizes; as time step size increases, the solution bounds widen, and
 successive FCT solution iterates differ more than for smaller time step sizes.
 This trend is shown in the increasing number of FCT iterations per time step
-in Table \ref{tab:obstruction_iterations}. Note this issue can be mitigated
+in Table \ref{tab:obstruction_iterations}. However, this issue can be easily mitigated
 using a relaxation factor on the iterative solution updates; for example, for
 the failing case of CFL number equal to 20, convergence can be achieved with a
 relaxation factor of 0.9, giving average iterations per time step of
@@ -189,7 +189,8 @@ relaxation factor of 0.9, giving average iterations per time step of
 1.0  &  501 & 10.02 &  970 &  19.40\\
 5.0  &  157 & 15.70 & 1130 & 113.00\\
 10.0 &   79 & 15.80 &  753 & 150.60\\
-20.0 &   -- &    -- & \multicolumn{2}{c}{\textbf{FAIL}}\\
+20.0 &   -- &    -- & \multicolumn{2}{c}{fail}\\
+20.0 (relax=0.9) &   ??? &   14.33 &  ??? & 221.67 \\
 \hline\end{tabular}
 \end{table}
 %-------------------------------------------------------------------------------
