--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -14,7 +14,7 @@
 %------------------------------------------------------------------------------
 \begin{frontmatter}
 
-\journal{Journal of Computational and Applied Mathematics}
+\journal{Journal of Computational Physics}
 
 \title{Flux-Corrected Transport Techniques Applied to the
 	Radiation Transport Equation Discretized with Continuous Finite Elements}
