some fixes, final touches, and additional data needed for submission

--- a/doc/paper/FCT_radiation_paper.tex
+++ b/doc/paper/FCT_radiation_paper.tex
@@ -60,6 +60,9 @@ entropy viscosity \sep FCT \sep particle transport equation
 \section{Conclusions\label{sec:conclusions}}
 \input{content/conclusions}
 
+\section{Acknowledgments}
+\input{content/ack}
+
 \section*{References}
 \bibliographystyle{elsarticle-num}
 \bibliography{references}
