--- a/doc/paper/content/abstract.tex
+++ b/doc/paper/content/abstract.tex
@@ -14,6 +14,6 @@ Time discretizations for unsteady problems include theta schemes
 such as explicit and implicit Euler, and strong-stability preserving
 Runge-Kutta (SSPRK) methods.
 The developed FCT scheme is shown to be robust with explicit time discretizations
-but may encounter nonlinear convergence difficulties for steady-state
+but may require damping in the nonlinear iterations for steady-state
 and implicit time discretizations.
 \end{abstract}
