--- a/doc/paper/references.bib
+++ b/doc/paper/references.bib
@@ -314,9 +314,9 @@
   Timestamp                = {2016.09.10}
 }
 
-@Article{lanthrop,
+@Article{lathrop,
   Title                    = {Spatial Differencing of the Transport Equation: Positivity vs. Accuracy},
-  Author                   = {K. D. Lanthrop},
+  Author                   = {K. D. Lathrop},
   Journal                  = {Journal of Computational Physics},
   Year                     = {1969},
   Pages                    = {475--498},
