--- a/doc/paper/content/introduction.tex
+++ b/doc/paper/content/introduction.tex
@@ -68,7 +68,7 @@ where the techniques proposed by Guermond and Popov \cite{guermond_ev} have been
 One of the main objectives of this paper is to present a method that precludes
 the formation of spurious oscillations and the negativities that result from
 these oscillations; these issues have been a long-standing issue in the
-numerical solution of the transport equation \cite{lanthrop}.
+numerical solution of the transport equation \cite{lathrop}.
 Not only are these negativities physically incorrect
 (a particle's distribution density must be non-negative), but they can cause
 simulations to terminate prematurely, for example in radiative transfer where
